# gemini-next-chat

./: .gitignore  BUILD_INSTRUCTIONS.md  build.js  next.config.js  package-lock.json  package.json  quickbuild.js
app/: layout.tsx  page.tsx
components/: AppSidebar.tsx  Setting.tsx
components/ui/: sidebar-fixed.tsx
docs/: DISTRIBUTION.md  ICON_GUIDE.md  SECURITY.md
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/src/: main.rs
